--- a/index.html
+++ b/index.html
@@ -3,77 +3,58 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TKZ — Official Website</title>
+    <title>Your Community</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-
-    <!-- 🌙 Light/Dark Mode Switch -->
-    <button id="theme-toggle">🌙</button>
-
-    <!-- 🔥 NAVBAR -->
+    
+    <!-- NAVBAR -->
     <nav id="navbar">
-        <h2>TKZ</h2>
+        <h2 class="logo">Your Community</h2>
         <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#staff">Staff Team</a></li>
+            <li><a href="#staff">Staff</a></li>
             <li><a href="#updates">Updates</a></li>
             <li><a href="#join">Join Us</a></li>
         </ul>
     </nav>
 
-    <!-- 🎉 HERO SECTION -->
+    <!-- HERO SECTION -->
     <section id="hero">
-        <h1>Welcome to TKZ</h1>
-        <p>The most advanced and active ERLC community.</p>
-        <a href="https://discord.gg/TVJdth4fsu" target="_blank" class="hero-btn">Join Our Discord</a>
+        <h1 class="title">Welcome to Our Community</h1>
+        <p class="subtitle">A modern gaming + social community built for everyone.</p>
+        <a href="#join" class="btn hero-btn">Join Now</a>
     </section>
 
-    <!-- 📖 ABOUT -->
-    <section id="about" class="fade-in">
+    <!-- ABOUT -->
+    <section id="about" class="section">
         <h2>About Us</h2>
         <p>
-            TKZ is a modern, well-managed ERLC community focused on professionalism, 
-            roleplay quality, and amazing staff. Our systems, events, and structure 
-            make us one of the top ERLC groups.
+            We are a modern community offering events, gaming sessions, interactive chats,
+            and a welcoming environment for everyone. Our amazing staff team and members
+            make sure your experience is fun and safe.
         </p>
     </section>
 
-    <!-- 🧑‍💼 STAFF TEAM -->
-    <section id="staff" class="fade-in">
+    <!-- STAFF TEAM -->
+    <section id="staff" class="section">
         <h2>Staff Team</h2>
 
-        <div class="staff-grid">
-
-            <!-- Profiles auto-load from JS using TWIMG URLs -->
-
-        </div>
+        <div id="staff-container" class="staff-grid"></div>
     </section>
 
-    <!-- 📰 UPDATES -->
-    <section id="updates" class="fade-in">
-        <h2>Updates</h2>
-        <p>(You can later make this dynamic; for now it's placeholder.)</p>
-
-        <ul class="update-list">
-            <li>✔ New tryout system added</li>
-            <li>✔ Website launched</li>
-            <li>✔ Automatic staff pictures implemented</li>
-        </ul>
+    <!-- UPDATES -->
+    <section id="updates" class="section">
+        <h2>Latest Updates</h2>
+        <p>Updates will appear here soon!</p>
     </section>
 
-    <!-- 🚀 JOIN US -->
-    <section id="join" class="fade-in">
-        <h2>Join TKZ</h2>
-        <p>Become part of our fast-growing ERLC community.</p>
-
-        <p class="live-count">
-            Live Discord Members: <span id="memberCount">Loading...</span>
-        </p>
-
-        <a href="https://discord.gg/TVJdth4fsu" target="_blank" class="join-btn">Join Discord</a>
+    <!-- JOIN US -->
+    <section id="join" class="section">
+        <h2>Join Us</h2>
+        <p>Become part of our growing family!</p>
+        <a class="btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
     </section>
 
     <script src="script.js"></script>
