--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Community</title>
+    <title>Tanukizaki</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     
     <!-- NAVBAR -->
     <nav id="navbar">
-        <h2 class="logo">Your Community</h2>
+        <h2 class="logo">Tanukizaki</h2>
         <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -22,8 +22,8 @@
 
     <!-- HERO SECTION -->
     <section id="hero">
-        <h1 class="title">Welcome to Our Community</h1>
-        <p class="subtitle">A modern gaming + social community built for everyone.</p>
+        <h1 class="title">Tanukizaki</h1>
+        <p class="subtitle">A modern VBL server + Community</p>
         <a href="#join" class="btn hero-btn">Join Now</a>
     </section>
 
@@ -31,16 +31,16 @@
     <section id="about" class="section">
         <h2>About Us</h2>
         <p>
-            We are a modern community offering events, gaming sessions, interactive chats,
-            and a welcoming environment for everyone. Our amazing staff team and members
-            make sure your experience is fun and safe.
+            We are a growing VBL community — friendly, fun, and the most well-operated server!  
+            Our Founder, Meow, started Tanukizaki with the mission to create a positive, enjoyable VBL space.
+            Since then, we have worked every day to improve our operations and deliver the best experience possible
+            to all our members.
         </p>
     </section>
 
     <!-- STAFF TEAM -->
     <section id="staff" class="section">
         <h2>Staff Team</h2>
-
         <div id="staff-container" class="staff-grid"></div>
     </section>
 
@@ -53,9 +53,14 @@
     <!-- JOIN US -->
     <section id="join" class="section">
         <h2>Join Us</h2>
-        <p>Become part of our growing family!</p>
-        <a class="btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
+        <p>Become part of the fastest-growing VBL community!</p>
+        <a class="btn join-btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
     </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>Developed by: Solomon</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
