--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     
-    <!-- NAVBAR -->
-    <nav id="navbar">
-        <h2 class="logo">Tanukizaki</h2>
-        <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#staff">Staff</a></li>
-            <li><a href="#updates">Updates</a></li>
-            <li><a href="#join">Join Us</a></li>
-        </ul>
-    </nav>
+  <nav id="navbar">
+    <h2 class="logo">Tanukizaki</h2>
+    <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#staff">Staff</a></li>
+        <li><a href="#updates">Updates</a></li>
+        <li><a href="#join">Join Us</a></li>
+    </ul>
+
+    <!-- LIGHT/DARK MODE TOGGLE -->
+    <button id="theme-toggle">🌙</button>
+</nav>
+
 
     <!-- HERO SECTION -->
     <section id="hero">
@@ -65,3 +68,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
