--- a/index.html
+++ b/index.html
@@ -1,71 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanukizaki</title>
-    <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Tanukizaki</title>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
-  <nav id="navbar">
-    <h2 class="logo">Tanukizaki</h2>
-    <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#staff">Staff</a></li>
-        <li><a href="#updates">Updates</a></li>
-        <li><a href="#join">Join Us</a></li>
-    </ul>
-
-    <!-- LIGHT/DARK MODE TOGGLE -->
-    <button id="theme-toggle">🌙</button>
+<header>
+<nav class="navbar">
+<h1 class="logo">Tanukizaki</h1>
+<ul>
+<li><a href="#home">Home</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#credits">Credits</a></li>
+<li><button id="themeToggle">🌙</button></li>
+</ul>
 </nav>
+</header>
 
 
-    <!-- HERO SECTION -->
-    <section id="hero">
-        <h1 class="title">Tanukizaki</h1>
-        <p class="subtitle">A modern VBL server + Community</p>
-        <a href="#join" class="btn hero-btn">Join Now</a>
-    </section>
+<section id="home" class="hero">
+<h2>Tanukizaki</h2>
+<p>A modern VBL server + Community</p>
+<p class="sub">We are a growing VBL community, friendly, fun, and the most well operated server! Join us now!</p>
+<a href="https://discord.gg/TVJdth4fsu" class="join-btn">Join Us</a>
 
-    <!-- ABOUT -->
-    <section id="about" class="section">
-        <h2>About Us</h2>
-        <p>
-            We are a growing VBL community — friendly, fun, and the most well-operated server!  
-            Our Founder, Meow, started Tanukizaki with the mission to create a positive, enjoyable VBL space.
-            Since then, we have worked every day to improve our operations and deliver the best experience possible
-            to all our members.
-        </p>
-    </section>
 
-    <!-- STAFF TEAM -->
-    <section id="staff" class="section">
-        <h2>Staff Team</h2>
-        <div id="staff-container" class="staff-grid"></div>
-    </section>
+<div class="member-box">
+<img src="https://cdn.discordapp.com/icons/1334165564454994031/a_866f5d06ccaaa7f57f616be95b11f740.gif?size=2048" class="server-icon" />
+<p id="memberCount">Loading members...</p>
+</div>
+</section>
 
-    <!-- UPDATES -->
-    <section id="updates" class="section">
-        <h2>Latest Updates</h2>
-        <p>Updates will appear here soon!</p>
-    </section>
 
-    <!-- JOIN US -->
-    <section id="join" class="section">
-        <h2>Join Us</h2>
-        <p>Become part of the fastest-growing VBL community!</p>
-        <a class="btn join-btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
-    </section>
+<section id="about" class="about">
+<h2>About Us</h2>
+<p>
+Our Founder, Meow, decided to start a VBL community, which will be friendly and fun to be in.
+Since then we've been working hard day by day to improve our operations everyday, and make this a good
+experience for everyone..!
+</p>
+</section>
 
-    <!-- FOOTER -->
-    <footer>
-        <p>Developed by: Solomon</p>
-    </footer>
 
-    <script src="script.js"></script>
+<section id="credits" class="credits">
+<h2>Credits</h2>
+<p>Developed by: Solomon</p>
+</section>
+
+
+<script src="script.js"></script>
 </body>
 </html>
-
