--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><a href="#updates">Updates</a></li>
             <li><a href="#join">Join Us</a></li>
         </ul>
+        <button id="theme-toggle" class="theme-btn">🌙</button>
+
     </nav>
 
     <!-- HERO SECTION -->
@@ -65,3 +67,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
