--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <nav id="navbar">
         <h2 class="logo">Tanukizaki</h2>
         <ul>
+            <span id="member-count" class="member-display">Loading...</span>
+
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#staff">Staff</a></li>
@@ -67,4 +69,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
