--- a/index.html
+++ b/index.html
@@ -3,68 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanukizaki</title>
+    <title>Tanukizaki | VBL Community</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 
 <body>
 
+    <!-- LOADING SCREEN -->
+    <div id="loader">
+        <div class="spinner"></div>
+        <p>Loading...</p>
+    </div>
+
+    <!-- LIVE MEMBER COUNT WIDGET -->
+    <div id="memberWidget">Live Members: <span id="memberCount">Loading...</span></div>
+
     <!-- NAVBAR -->
-    <nav id="navbar">
-        <h2 class="logo">Tanukizaki</h2>
-        <ul>
-            <li><a href="#hero">Home</a></li>
+    <nav>
+        <h1 class="logo">Tanukizaki</h1>
+
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#staff">Staff</a></li>
             <li><a href="#join">Join Us</a></li>
-            <li><button id="themeToggle" class="theme-btn">🌙</button></li>
         </ul>
+
+        <!-- LIGHT/DARK MODE SWITCH -->
+        <label class="switch">
+            <input type="checkbox" id="themeToggle">
+            <span class="slider"></span>
+        </label>
     </nav>
 
-    <!-- HERO -->
-    <section id="hero">
-        <img src="https://tr.rbxcdn.com/ccf17e7d98d19ce2cdade517693c54b4/768/432/Image/Png"
-             class="hero-img" draggable="false">
-
-        <h1 class="title reveal">Tanukizaki</h1>
-        <p class="subtitle reveal delay">A modern VBL server + community</p>
-
-        <div class="member-box reveal delay2">
-            <img src="https://cdn.discordapp.com/icons/1334165564454994031/a_866f5d06ccaaa7f57f616be95b11f740.gif"
-                 class="server-icon">
-            <p id="memberCount">Loading members...</p>
-        </div>
-
-        <a href="#join" class="btn hero-btn reveal delay3">Join Now</a>
+    <!-- HERO SECTION -->
+    <section id="home" class="hero reveal">
+        <h2 class="hero-title">Tanukizaki</h2>
+        <p class="hero-sub">A modern VBL server + Community</p>
+        <a href="#join" class="btn">Join Us</a>
     </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="section reveal">
-        <h2>About Us</h2>
+    <!-- DESCRIPTION -->
+    <section id="desc" class="section reveal">
+        <h2>Why Join Us?</h2>
         <p>
-            We are a growing VBL community — friendly, fun, and the most well-operated server!
-            Our Founder, Meow, created Tanukizaki to build a positive, enjoyable, competitive VBL community.
+            We are a growing VBL community, friendly, fun, and the most well operated server! 
+            Join us now!
         </p>
     </section>
 
-    <!-- STAFF -->
-    <section id="staff" class="section reveal">
-        <h2>Staff Team</h2>
-        <div id="staff-container" class="staff-grid"></div>
+    <!-- ABOUT US -->
+    <section id="about" class="section reveal">
+        <h2>About Us</h2>
+        <p>
+            Our Founder, Meow, decided to start a VBL community, which will be friendly and fun to be in.
+            Since then we've been working hard day by day to improve our operations and make this 
+            a good experience for everyone!
+        </p>
     </section>
 
-    <!-- JOIN -->
+    <!-- STAFF SECTION -->
+    <section id="staff" class="section reveal">
+        <h2>Our Staff Team</h2>
+
+        <div class="staff-grid" id="staffGrid">
+            <!-- Staff boxes auto-filled by JS -->
+        </div>
+    </section>
+
+    <!-- JOIN US -->
     <section id="join" class="section reveal">
-        <h2>Join Us</h2>
-        <p>Become part of the fastest-growing VBL community.</p>
-        <a href="https://discord.gg/TVJdth4fsu" target="_blank" class="btn join-btn">Join Discord</a>
+        <h2>Join Tanukizaki</h2>
+        <a class="btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Our Discord</a>
     </section>
 
     <!-- FOOTER -->
     <footer>
-        <p>Developed by Solomon</p>
+        <p>Developed by: Solomon</p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
