--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<!-- LOADING SCREEN -->
+<!-- FAKE LOADING SCREEN -->
 <div id="page-loader" class="page-loader">
     <div class="loader-bar-container">
         <div id="loader-bar" class="loader-bar"></div>
