--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="loader-bar-container">
         <div id="loader-bar" class="loader-bar"></div>
     </div>
-    <div class="loader-text">Loading Tanukizaki...</div>
+    <div class="loader-text" id="loader-text">Loading</div>
 </div>
 
 <!-- MEMBER WIDGET -->
@@ -47,8 +47,8 @@
     <h2>About Us</h2>
     <p>
         Our Founder, Meow, decided to start a VBL community, which is friendly and fun.
-        Since then, we’ve been working hard every day to improve operations and provide a
-        great experience for everyone.
+        Since then, we’ve been working hard every day to improve operations and provide
+        a great experience for everyone.
     </p>
 </section>
 
