--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanukizaki</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -15,6 +15,9 @@
     </div>
     <div class="loader-text" id="loader-text">Loading</div>
 </div>
+
+<!-- PARTICLES BACKGROUND -->
+<canvas id="particle-canvas"></canvas>
 
 <!-- MEMBER WIDGET -->
 <div id="member-widget">
