--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <!-- Loading Screen -->
 <div id="loader">
     <div class="loader-content">
-        <p id="loadingText">Loading</p>
+        <p id="loadingText">Loading...</p>
         <div class="loader-bar">
             <div id="loaderProgress"></div>
         </div>
     </div>
 </div>
 
-<!-- Member Widget -->
+<!-- Live Members Widget -->
 <div id="memberWidget">
     <p>Live Members: <span id="liveMembers">404</span></p>
 </div>
@@ -40,7 +41,7 @@
     <h1 class="title">Tanukizaki</h1>
     <p class="subtitle">A modern VBL server + Community</p>
     <p class="subtext">We are a growing VBL community — friendly, fun, and well-operated. Join us now!</p>
-    <a href="https://discord.gg/TVJdth4fsu" class="btn join-btn">Join Us!</a>
+    <a href="#join" class="btn hero-btn">Join Now</a>
 </section>
 
 <!-- ABOUT -->
@@ -52,7 +53,7 @@
     </p>
 </section>
 
-<!-- STAFF TEAM -->
+<!-- STAFF -->
 <section id="staff" class="section hidden">
     <h2>Staff Team</h2>
     <div id="staff-container" class="staff-grid"></div>
@@ -67,12 +68,14 @@
 <!-- JOIN US -->
 <section id="join" class="section hidden">
     <h2>Join Us</h2>
-    <p>Become part of the fastest-growing VBL community!</p>
+    <p class="join-desc">
+        We are a gaming VBL community — friendly, fun, and the most well-operated server! Join us now!
+    </p>
     <a class="btn join-btn" href="https://discord.gg/TVJdth4fsu" target="_blank">Join Discord</a>
 </section>
 
 <!-- FOOTER -->
-<footer class="hidden">
+<footer>
     <p>Developed by: Solomon</p>
 </footer>
 
